--- a/nlw/index.html
+++ b/nlw/index.html
@@ -9,14 +9,21 @@
     <title>Ricardo Alvim - DoWhile 2021</title>
     <style>
       h1 {
+        color: white;
         font-size: 1.5rem;
       }
       html, body {
         height: 100%;
       }
       body {
+        background: rgb(3, 3, 29);
         display: grid;
         place-items: center;
+      }
+      
+      a {
+        color: rgb(114, 109, 109);
+        text-decoration: none;
       }
     </style>
   </head>
